--- a/paperStyle.css
+++ b/paperStyle.css
@@ -4,7 +4,7 @@
     row-gap: 20px;
     column-gap: 20px;
     grid-template-rows: [r0] 100px [r1] 400px [r2] 50px [r3] 500px [r4] ;
-    grid-template-columns: [c0] 35% [c1] 500px [c2] auto [c3]; 
+    grid-template-columns: [c0] 33% [c1] 30% [c2] 33% [c3]; 
     
   }
   #product-image {
@@ -54,7 +54,7 @@
     text-align: center;
     font-size: 16px;
     margin: 4px 2px;
-    opacity: 0.6;
+    opacity: 1;
     transition: 0.3s;
     display: inline-block;
     text-decoration: none;
@@ -66,7 +66,7 @@
     grid-column-start: c2;
     grid-column-end: -1;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    opacity: 1;
+    opacity: 0.8;
   }
   #similar-products-title {
     font-size: 20px;
@@ -85,21 +85,24 @@
     border-top: 3px solid #bbb; 
   }
   #product-one {
-    margin: 30px 50px;
+    text-align: center;
+    margin-top: 30px;
     grid-row-start: r3;
     grid-row-end: r4;
     grid-column-start: c0;
     grid-column-end: c1;
   }
   #product-two {
-    margin: 30px 50px;
+    text-align: center;
+    margin-top: 30px;
     grid-row-start: r3;
     grid-row-end: r4;
     grid-column-start: c1;
     grid-column-end: c2;
   }
   #product-three {
-    margin: 30px 50px;
+    text-align: center;
+    margin-top: 30px;
     grid-row-start: r3;
     grid-row-end: -1;
     grid-column-start: c2;
