--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -39,8 +39,18 @@ body {
 	text-decoration: none;
 }
 
-.navLi a:hover{
-	background-color: #19345e;
+
+.navRight{
+	float: right;
+}
+
+Input[type=search]{
+	appearance: none;	
+	width: 100%	
+	background-color: white;
+	background-position: 10px 10px;
+	background-repeat: no-repeat;
+	padding-left: 40px;
 }
 
 .footer {
@@ -50,8 +60,7 @@ body {
 }
 
 .logo img{
-	position:absolute;
+	position: absolute;
 	margin-top: 17px;
 	margin-left: -35px;
 }
-
