--- a/paperStyle.css
+++ b/paperStyle.css
@@ -46,7 +46,7 @@
     grid-column-end: c3;
   }
   #product-button-buy {
-    background-color: #036ba8;
+    background-color: #1F618D;
     border: none;
     border-radius: 12px;
     color: white;
