--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,7 +1,54 @@
-body {
-	background-repeat: no-repeat;
-	background: linear-gradient(to right, white 0%, white 100%);
+.body {
+  background-repeat: no-repeat;
+  background: linear-gradient(to right, white 0%, white 100%);
 }
+
+.nav {
+  overflow: hidden;
+  background-color: black;
+  padding: 15px;
+  z-index: 10;
+  width:100%;
+  position: sticky;
+  top: 0;
+}
+
+.nav a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 20px 20px;
+  margin: 0px 16px;
+  text-decoration: none;
+  font-size: 24px;
+  font-weight: bold;
+  
+}
+
+.nav a:hover {
+  background-color: #3b5a80;
+  color: white;
+}
+
+.nav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.leftNav{
+  float: left;
+}
+
+.rightNav{
+  float: right;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
 
 .title{
 	font-size: 50px;
@@ -9,7 +56,7 @@ body {
 }
 
 .summary{
-	font-size: 20px;
+	font-size: 40px;
 	color: white;
 	padding: 4px;
 	width: 1000px;
@@ -18,7 +65,7 @@ body {
 }
 
 .sumText{
-	font-size: 20px;
+	font-size: 30px;
 	color: white;
 	padding: 4px;
 	width: 1000px;
@@ -29,11 +76,5 @@ body {
 .footer {
 	width:100%;
 	background: #1F618D;
-	height: 300px;
-}
-
-.logo img{
-	position: absolute;
-	margin-top: 17px;
-	margin-left: -35px;
+	height: 75px;
 }
