--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,23 +1,6 @@
 .body {
   background-repeat: no-repeat;
   background: linear-gradient(to right, white 0%, white 100%);
-  margin:0;
-
-}
-
-button
-{
-	position: absolute;
-	top: 100%;
-	left: 90%;
-	transform: translate(-50%, -50%);
-	padding: 10px;
-	background: #1F618D;
-	border: none;
-	outline: none;
-	font-size: 18px;
-	text-transform: uppercase;
-	cursor: pointer;
 }
 
 .nav {
@@ -26,9 +9,8 @@ button
   padding: 15px;
   z-index: 10;
   width:100%;
-  position: sticky;
-  top: 0;
-  position: sticky;
+  position: fixed;
+  margin: -10px;
 }
 
 .nav a {
@@ -53,6 +35,12 @@ button
   color: white;
 }
 
+.img {
+  position: relative;
+  right: 10px;
+
+}
+
 .leftNav{
   float: left;
 }
@@ -60,13 +48,6 @@ button
 .rightNav{
   float: right;
 }
-
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
 
 .title{
 	font-size: 50px;
@@ -96,7 +77,6 @@ button
 	background: #1F618D;
 	height: 75px;
 }
-
 
 
 
